--- a/xpi/ctr_os_special/linux/classictabsextra.css
+++ b/xpi/ctr_os_special/linux/classictabsextra.css
@@ -11,23 +11,26 @@
 	}
 
 	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-	  background-image: linear-gradient(to top,#e2dfdd,#eae8e4,#f5f5f2) !important;
+	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
 	}
 	
 	.tabs-newtab-button:not(:-moz-lwtheme),
 	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
-	  color:black !important;
+	  background-image: linear-gradient(hsla(0,0%,100%,.2), hsla(0,0%,45%,.2) 2px, hsla(0,0%,32%,.2) 80%) !important;
 	}
 	
 	.tabs-newtab-button:hover:not(:-moz-lwtheme),
 	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#cbc7c1,#d5d2cc,#e1ded8) !important;
-	  color:black !important;
+	  background-image: linear-gradient(hsla(0,0%,100%,.6), hsla(0,0%,100%,.2) 4px, hsla(0,0%,75%,.2) 80%) !important;
 	}
 	
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 	  background-size: 95% 100% !important;
 	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
+	}
+	
+	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
+	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%) !important;
 	}
 }
