--- a/xpi/ctr_os_special/winxp/tabsontop_offextra.css
+++ b/xpi/ctr_os_special/winxp/tabsontop_offextra.css
@@ -2,8 +2,20 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	#navigator-toolbox > #TabsToolbar:not(:-moz-lwtheme),
+	#TabsToolbar:not(:-moz-lwtheme),
 	#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar:not(:-moz-lwtheme){
 	  background: -moz-Dialog !important;
+	}
+	
+	#titlebar{
+		min-height: 60px !important;
+		height: 60px !important;
+		max-height: 60px !important;
+	}
+	@media all and (-moz-windows-classic) {	
+		#toolbar-menubar{
+			margin-top: -8px !important;
+			margin-bottom: -6px !important;
+		}
 	}
 }
