--- a/xpi/ctr_os_special/winaero/classictabsextra.css
+++ b/xpi/ctr_os_special/winaero/classictabsextra.css
@@ -59,24 +59,36 @@
 	@media not all and (-moz-windows-theme:aero) {
    	
 		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top,#e6e3df,#eae8e4,#f5f5f2) !important;
+		  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
+							linear-gradient(-moz-dialog, -moz-dialog) !important;
 		}
 
 		.tabs-newtab-button:not(:-moz-lwtheme),
 		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
+		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog) !important;
 		  color:black !important;
 		}
 
 		.tabs-newtab-button:hover:not(:-moz-lwtheme),
 		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#cbc7c1,#d5d2cc,#e1ded8) !important;
+		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+							linear-gradient(-moz-dialog, -moz-dialog) !important;
 		  color:black !important;
 		}
+		
 		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 		  background-size: 95% 100% !important;
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
 		}
+		
+		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
+		  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
+		}
+		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover {
+		  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
+							radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
+		}
+
     }
 	
 }
