--- a/xpi/ctr_os_special/winxp/classictabsextra.css
+++ b/xpi/ctr_os_special/winxp/classictabsextra.css
@@ -32,122 +32,35 @@
 	.tabs-newtab-button{
 	  margin-right:-15px !important;
 	}
+	
+	/* tab colors */
+	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	
+	.tabs-newtab-button:not(:-moz-lwtheme),
+	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	  color:black !important;
+	}
+	
+	.tabs-newtab-button:hover:not(:-moz-lwtheme),
+	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	  color:black !important;
+	}
 
-	/* for Windows Classic Theme  */
-	@media all and (-moz-windows-classic) {
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-		  background-image: linear-gradient(to top,#e6e3df,#eae8e4,#f5f5f2) !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
-		  color:black !important;
-		}
-		
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#cbc7c1,#d5d2cc,#e1ded8) !important;
-		  color:black !important;
-		}
-		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-		  background-size: 95% 100% !important;
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
-		}
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:-moz-lwtheme){
+	  background-size: 95% 100% !important;
+	  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25));
 	}
-	
-	/* for Windows Luna Blue and Olive Theme */
-	@media not all and (-moz-windows-classic) {
-   	
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-		  background-image: linear-gradient(to top,#f3f1e8,#eae8e4,#f5f5f2) !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
-		  color:black !important;
-		}
-		
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#cbc7c1,#d5d2cc,#e1ded8) !important;
-		  color:black !important;
-		}
-		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-		  background-size: 95% 100% !important;
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
-		}
-    }
-	
-	@media all and (-moz-windows-theme: luna-silver){
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-		  background-image: linear-gradient(to top,#ececee,#f0eff1,#f5f5f6) !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #b8b7bb,#cccbce,#d5d4d8) !important;
-		  color:black !important;
-		}
-		
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#d4d3d7,#dfdee1,#e8e8ea) !important;
-		  color:black !important;
-		}
-		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-		  background-size: 95% 100% !important;
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #b8b7bb,#cccbce,#d5d4d8) !important;
-		}
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover:not(:-moz-lwtheme){
+	  background-size: 95% 100% !important;
+	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
+						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25));
 	}
-	
-	@media all and (-moz-windows-theme: royale){
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-		  background-image: linear-gradient(to top,#f3f1f4,#f6f5f7,#fbfafb) !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #c1bfc3,#d5d3d7,#dfdde1) !important;
-		  color:black !important;
-		}
-		
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#dddbdf,#e8e7ea,#f5f4f5) !important;
-		  color:black !important;
-		}
-		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-		  background-size: 95% 100% !important;
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #c1bfc3,#d5d3d7,#dfdde1) !important;
-		}
-	}
-	
-	@media all and (-moz-windows-theme: zune){
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
-		  background-image: linear-gradient(to top,#eeeeee,#f1f1f1,#f8f8f8) !important;
-		}
-		
-		.tabs-newtab-button:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #bababa,#cecece,#d7d7d7) !important;
-		  color:black !important;
-		}
-		
-		.tabs-newtab-button:hover:not(:-moz-lwtheme),
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#d6d6d6,#e1e1e1,#f0f0f0) !important;
-		  color:black !important;
-		}
-		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-		  background-size: 95% 100% !important;
-		  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #bababa,#cecece,#d7d7d7) !important;
-		}
-	}
+
 }
