--- a/xpi/ctr_os_special/linux/mode_icons_and_text_extra.css
+++ b/xpi/ctr_os_special/linux/mode_icons_and_text_extra.css
@@ -2,34 +2,43 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-    #navigator-toolbox .toolbarbutton-icon,
-	#navigator-toolbox .toolbarbutton-text,
-    #ctr_addon-bar .toolbarbutton-icon,
-	#ctr_addon-bar .toolbarbutton-text{
-	  padding: 0px !important;
-	  margin: 0px !important;
+	#nav-bar .toolbarbutton-1:not([type="menu-button"]) .toolbarbutton-icon {
+	  min-width: 18px !important;
+	  height: 18px !important;
+	  padding: 0 !important;
+	  margin: 0 !important;
 	}
-	#navigator-toolbox #nav-bar toolbarbutton{
-	  margin-top: 1px !important;
-	  padding: 0px !important;
+	#nav-bar .toolbarbutton-1[type="menu-button"] .toolbarbutton-icon {
+	  min-width: 18px !important;
+	  height: 18px !important;
+	  padding: 0 !important;
+	  margin: 0 !important;
 	}
+
+	#nav-bar .toolbarbutton-1 .toolbarbutton-text,	
+	#nav-bar .toolbarbutton-1 dropmarker {
+	  padding:0px !important;
+	  margin:0px !important;
+	}
+
+	#nav-bar .toolbarbutton-1 {
+	  margin:1px !important;
+	}
+
 	#navigator-toolbox #nav-bar #urlbar-container{
 	  margin-left: 4px !important;
 	}
 	#navigator-toolbox #nav-bar #urlbar{
 	  border-radius: 3px !important;
 	}
-	#navigator-toolbox #nav-bar  #bookmarks-menu-button .toolbarbutton-text{
-	  font-size: 12px !important;
-	}
+
 	#navigator-toolbox #nav-bar .toolbarbutton-1 {
 	  border: 1px solid transparent !important;
 	}
 	
-	#bookmarks-menu-button:not([customizableui-areatype="menu-panel"]) > .toolbarbutton-menubutton-dropmarker{
+	#bookmarks-menu-button:not([cui-areatype="menu-panel"]) > .toolbarbutton-menubutton-dropmarker{
 	  padding-top: 4px !important;
 	  padding-bottom: 3px !important;
-
 	}
 
 }
