--- a/xpi/ctr_os_special/winxp/mode_icons_and_text_extra.css
+++ b/xpi/ctr_os_special/winxp/mode_icons_and_text_extra.css
@@ -2,17 +2,47 @@
 
 @-moz-document url(chrome://browser/content/browser.xul) {
 
-    #navigator-toolbox #nav-bar .toolbarbutton-text{
+	#nav-bar .toolbarbutton-1:not([type="menu-button"]):not([type="menu"]) .toolbarbutton-icon {
+	  min-width: 20px !important;
+	  height: 20px !important;
 	  padding: 0px !important;
+	  margin: -2px 0 0 0 !important;
 	}
-	#navigator-toolbox #nav-bar toolbarbutton{
-	  margin-top: 1px !important;
+	#nav-bar .toolbarbutton-1[type="menu-button"] .toolbarbutton-icon {
+	  min-width: 18px !important;
+	  height: 18px !important;
 	  padding: 0px !important;
+	  margin: -2px 0 0 0 !important;
+	}
+	#nav-bar .toolbarbutton-1[type="menu"] .toolbarbutton-icon {
+	  min-width: 18px !important;
+	  height: 18px !important;
+	  padding: 0px !important;
+	  margin: -2px 0 0 0 !important;
+	}
+
+	#nav-bar .toolbarbutton-1:not([type="menu-button"]):not([type="menu"]) .toolbarbutton-text {
+	  padding: 0px !important;
+	  margin: 0 0 -4px 0 !important;
+	}
+	#nav-bar .toolbarbutton-1[type="menu-button"] .toolbarbutton-text {
+	  padding: 3px 0 0 0 !important;
+	  margin: 0 0 -4px 0 !important;
+	}
+	#nav-bar .toolbarbutton-1[type="menu"] .toolbarbutton-text {
+	  padding: 2px 0 0 0 !important;
+	  margin: 0 0 -4px 0 !important;
+	}
+	#nav-bar .toolbarbutton-1 dropmarker {
+	  padding: 0px !important;
+	  margin: 0px 0 -4px 0 !important;
+	}
+
+	#nav-bar .toolbarbutton-1 {
+	  margin:1px !important;
 	}
 	#navigator-toolbox #nav-bar #urlbar-container{
 	  margin-left: 4px !important;
 	}
-	#navigator-toolbox #nav-bar  #bookmarks-menu-button .toolbarbutton-text{
-	  font-size: 12px !important;
-	}
+
 }
