--- a/xpi/ctr_os_special/mac/tabsontop_offextra.css
+++ b/xpi/ctr_os_special/mac/tabsontop_offextra.css
@@ -16,14 +16,14 @@
 		margin-top: -1px !important;
 		margin-bottom: 1px !important;
 	}
-	#ctr_appbutton{
+	#TabsToolbar #ctr_appbutton{
 		margin-top: 0px !important;
 		margin-bottom: 0px !important;
 	}
 	
 	#titlebar{
-		min-height: 60px !important;
+		/*min-height: 60px !important;
 		height: 60px !important;
-		max-height: 60px !important;
+		max-height: 60px !important;*/
 	}
 }
