--- a/xpi/ctr_os_special/winaero/overlayextra.css
+++ b/xpi/ctr_os_special/winaero/overlayextra.css
@@ -64,58 +64,62 @@
 		border:1px solid #a0a0a0;
 	}
 
-	#appmenuPrimaryPane{
-		-moz-appearance:none;
-		background:white;
-		box-shadow:none;
-		border:0;
-		padding: 2px;
-		-moz-border-end: none;
-	}
+	@media not all and (-moz-windows-classic) {
 	
-	#appmenuSecondaryPane {
-	  background-color: #f1f5fb;
-	  box-shadow: 1px 0 2px rgb(204,214,234) inset;
-	  -moz-padding-start: 3px;
-	  -moz-padding-end: 2px;
-	  padding-top: 2px;
-	  padding-bottom: 2px;
-	  font-family: "Segoe UI Semibold", "Segoe UI", sans-serif;
-	}
-	
-	#appmenuSecondaryPane:-moz-locale-dir(rtl) {
-	  box-shadow: -1px 0 2px rgb(204,214,234) inset;
-	}
+		#appmenuPrimaryPane{
+			-moz-appearance:none;
+			background:white;
+			box-shadow:none;
+			border:0;
+			padding: 2px;
+			-moz-border-end: none;
+		}
+		
+		#appmenuSecondaryPane {
+		  background-color: #f1f5fb;
+		  box-shadow: 1px 0 2px rgb(204,214,234) inset;
+		  -moz-padding-start: 3px;
+		  -moz-padding-end: 2px;
+		  padding-top: 2px;
+		  padding-bottom: 2px;
+		  font-family: "Segoe UI Semibold", "Segoe UI", sans-serif;
+		}
+		
+		#appmenuSecondaryPane:-moz-locale-dir(rtl) {
+		  box-shadow: -1px 0 2px rgb(204,214,234) inset;
+		}
 
-	#appmenuPrimaryPane menuseparator {
-	  -moz-appearance: none;
-	  margin-top: 3px;
-	  margin-bottom: 3px;
-	  margin-right:3px;
-	  -moz-margin-start: 30px;
-	  padding: 0;
-	  border-top: 1px solid #d6e5f5;
-	  border-bottom: none;
-	}
+		#appmenuPrimaryPane menuseparator {
+		  -moz-appearance: none;
+		  margin-top: 3px;
+		  margin-bottom: 3px;
+		  margin-right:3px;
+		  -moz-margin-start: 30px;
+		  padding: 0;
+		  border-top: 1px solid #d6e5f5;
+		  border-bottom: none;
+		}
 
-	#appmenuPrimaryPane #menu_newTabmenupopup,
-	#appmenuPrimaryPane #menu_newEditmenupopup,
-	#appmenuPrimaryPane #menu_newPrintmenupopup,
-	#appmenuPrimaryPane #newmenuWebDeveloperPopup {
-		-moz-appearance:none;
-		background:white;
-		box-shadow:none;
-		border:1px solid #a0a0a0;
-	}
+		#appmenuPrimaryPane #menu_newTabmenupopup,
+		#appmenuPrimaryPane #menu_newEditmenupopup,
+		#appmenuPrimaryPane #menu_newPrintmenupopup,
+		#appmenuPrimaryPane #newmenuWebDeveloperPopup {
+			-moz-appearance:none;
+			background:white;
+			box-shadow:none;
+			border:1px solid #a0a0a0;
+		}
+		
+		#appmenuSecondaryPane #newbookmarksMenuPopup,
+		#appmenuSecondaryPane #newHistorymenuPopup,
+		#appmenuSecondaryPane #menu_newHelpPopup,
+		#appmenuSecondaryPane #menu_newPreferencesmenuPopup{
+			-moz-appearance:none;
+			background:#f1f5fb;
+			box-shadow:none;
+			border:1px solid #a0a0a0;
+		}
 	
-	#appmenuSecondaryPane #newbookmarksMenuPopup,
-	#appmenuSecondaryPane #newHistorymenuPopup,
-	#appmenuSecondaryPane #menu_newHelpPopup,
-	#appmenuSecondaryPane #menu_newPreferencesmenuPopup{
-		-moz-appearance:none;
-		background:#f1f5fb;
-		box-shadow:none;
-		border:1px solid #a0a0a0;
 	}
 	
 	#appmenu-edit-label,
@@ -127,7 +131,11 @@
 	@media all and (-moz-windows-classic) {
 		#appmenu-edit-label{
 		  margin-left: 2px !important;
-		}	
+		}
+	
+		#appmenuSecondaryPane{
+		  border-left: 1px solid !important;
+		}
 	}
 	
 	/* ctr addonbar */
@@ -145,6 +153,12 @@
 	  margin-left: -3px !important;
 	}
 
+}
+
+.ctr_nonwindows,
+.ctr_linuxonly,
+.ctr_maconly{
+  visibility: collapse !important;
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
