--- a/xpi/content/css/tabs_squared-r-osx.css
+++ b/xpi/content/css/tabs_squared-r-osx.css
@@ -1,4 +1,3 @@
-@import url(chrome://ctr_os_special/skin/classictabsextra.css);
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
@@ -34,7 +33,7 @@
 	.tabbrowser-tab .tab-stack {
 	  -moz-appearance: none !important;
 	  margin-top: -1px !important;
-	  margin-bottom: -4px !important;
+	  margin-bottom: -2px !important;
 	}
 	
 	.tabbrowser-tab .tab-content{
@@ -48,23 +47,23 @@
 
 	#TabsToolbar {
 	  min-height: 0px !important;
-	  padding-left: 2px !important;
-	  padding-right: 2px !important;
 	}
 
 	.tabbrowser-tab,
 	.tabs-newtab-button{
 	  -moz-appearance: none !important;
-	  background: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+	  background: linear-gradient(to bottom, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 				  linear-gradient(-moz-dialog, -moz-dialog) !important;
 	  background-origin: border-box !important;
 	  background-position: 1px 2px !important;
 	  background-size: calc(100% - 2px) calc(100% - 3px) !important;
 	  background-repeat: no-repeat !important;
-	  border-width: 0px 3px 1px !important;
+	  border-width: 0px 3px 2px !important;
 	  border-style: solid !important;
-	  border-image: url(chrome://classic_theme_restorer/content/images/tab.png) 0 3 0 fill repeat stretch !important;
+	  border-image: url(chrome://classic_theme_restorer/content/images/tab-r.png) 0 3 0 fill repeat stretch !important;
 	  border-radius: 0 !important;
+	  border-bottom-left-radius: 9px !important;
+	  border-bottom-right-radius: 9px !important;
 	}
 
 	.tabbrowser-tab[selected="true"] {
@@ -81,7 +80,7 @@
 
 	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
-	  background-size: calc(100% - 1px) calc(100% - 4px) !important;
+	  background-size: calc(100% - 1px) calc(100% - 3px) !important;
 	}
 
 	.tabbrowser-tab:-moz-lwtheme-brighttext:not([selected="true"]),
@@ -111,16 +110,7 @@
 	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
-
-	.tab-background-middle[selected=true]:-moz-lwtheme{
-	  background: linear-gradient(to top, rgba(10%,10%,10%,.2) 0px, transparent 0px), linear-gradient(transparent, hsla(0,0%,45%,.0) 1px, hsla(0,0%,32%,.0) 80%, hsla(0,0%,0%,.0)) !important;
-	}
-
-	#navigator-toolbox toolbar:-moz-lwtheme{
-	  box-shadow:none !important;
-	  border: 0px solid transparent !important;
-	}
-
+	
 	.tabbrowser-tab[pinned]{
 	  min-width: 32px !important;
 	  width: 32px !important;
@@ -136,5 +126,68 @@
 	#tabbrowser-tabs:not([overflow]) > .tabbrowser-tab[last-visible-tab]:not([selected]):not([beforehovered]):not(:hover)::after {
 		background-image: none !important;
 	}
+	
+	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
+	  -moz-padding-end: 22px !important;
+	  -moz-padding-start: 0px !important;
+	}
+	
+	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme){
+	  background-image: linear-gradient(to bottom,#d3d3d3,#d3d3d3,#cdcdcd) !important;
+	}
+	
+	.tabs-newtab-button:not(:-moz-lwtheme),
+	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom, #949494,#9f9f9f,#a9a9a9) !important;
+	  color:black !important;
+	}
+	
+	.tabs-newtab-button:hover:not(:-moz-lwtheme),
+	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom,#adadad,#b8b8b8) !important;
+	  color:black !important;
+	}
 
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
+	  background-size: 95% 100% !important;
+	  background-image: linear-gradient(to bottom, #676f76 0px, transparent 1px),linear-gradient(to bottom, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
+	}
+
+	.tabbrowser-tabs{
+	  height:28px !important;
+	  border-bottom:0 !important;
+	}
+	.tabs-newtab-button > .toolbarbutton-icon{
+	  padding:0 !important;
+	  margin-left:-10px !important;
+	  margin-right:-10px !important;
+	}
+	.tabs-newtab-button{
+	  padding:0 !important;
+	}
+	
+	#main-window[tabsintitlebar][sizemode="normal"]  #TabsToolbar{
+		margin-left: 0px !important;
+	}
+	#main-window:not([tabsintitlebar])[sizemode="normal"]  #TabsToolbar{
+		margin-left: 0px !important;
+	}
+	
+	.tabbrowser-tabs{
+	  margin-top: -2px !important;
+	  margin-right: -8px !important;
+	}
+
+	#TabsToolbar:not(:-moz-lwtheme){
+		background: linear-gradient(to bottom,#5e5e5e 1px,#898989,#939393,#989898,#a1a1a1 1px) !important;
+		border-bottom: 1px solid #6f6f6f !important;
+	}
+	
+	#TabsToolbar #ctr_appbutton{
+	  border-radius: 0 !important;
+	  border-bottom-left-radius: 3px !important;
+	  border-bottom-right-radius: 3px !important;
+	  margin-top: 0 !important;
+	  border-top: 0 !important;
+	}
 }
