--- a/xpi/content/css/tabsontop_off.css
+++ b/xpi/content/css/tabsontop_off.css
@@ -22,7 +22,8 @@
 	  -moz-box-ordinal-group: 100 !important;
 	}
 
-	#TabsToolbar,	
+	#TabsToolbar,
+	#TabsToolbar:not(:-moz-lwtheme),
 	#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar{
 	  margin-top: 0px !important;
 	}
@@ -52,11 +53,11 @@
     }
 	
 	#main-window:not([tabsintitlebar]) #ctr_appbutton2{
-	  margin-bottom: -22px !important;
+	  /*margin-bottom: -22px !important;*/
 	}
 
     #main-window:not([tabsintitlebar]) #toolbar-menubar{
-        margin-left: 0px !important;
+        /*margin-left: 0px !important;*/
     }
 
 }
