--- a/xpi/ctr_os_special/mac/classictabsextra.css
+++ b/xpi/ctr_os_special/mac/classictabsextra.css
@@ -3,7 +3,7 @@
 @-moz-document url(chrome://browser/content/browser.xul){
 
 	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
-	  -moz-padding-end: 0px !important;
+	  -moz-padding-end: 22px !important;
 	  -moz-padding-start: 0px !important;
 	}
 	
@@ -31,6 +31,7 @@
 	.tabbrowser-tabs{
 	  height:28px !important;
 	  border-bottom:0 !important;
+	  margin-right: -8px !important;
 	}
 	.tabs-newtab-button > .toolbarbutton-icon{
 	  padding:0 !important;
